--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MORGAN = combined
 API_PREFIX = /v1
 PORT=4001
 FRONTEND_HOST=host_here
+SENDGRID_API= digismartdisc@gmail.com
+SENDGRID_API_KEY= xmcscwkzvrlorqtc
+EMAIL_HOST = smtp.gmail.com
