--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "npm run build && pm2 start build/server.js --name 'boilerplate_apis' -dev",
     "restart": "npm run build && pm2 restart passivo_apis",
-    "predev": "npm run swagger",
+    "predev": " npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
-    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "dev": "export AWS_PROFILE=digismart && export AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
     "swagger": "tsoa spec",
     "prestart": "mkdir -p build/template && cp -a src/template build/"
   },
@@ -22,31 +22,40 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "aws-cli": "^0.0.2",
+    "aws-sdk": "^2.1341.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "bull": "^4.12.2",
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.9",
     "eslint": "^8.6.0",
     "express": "^4.17.2",
+    "fluent-ffmpeg": "^2.1.2",
     "handlebars": "^4.7.7",
     "helmet": "^7.1.0",
     "joi-objectid": "^4.0.2",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "mongo-copydb": "^1.0.4",
-    "mongoose": "5.13.14",
+    "mongoose": "^6.4.7",
     "mongoose-lean-virtuals": "^0.9.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^3.0.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.7.5",
+    "sharp": "^0.33.2",
     "stripe": "^9.8.0",
     "swagger-ui-express": "^4.3.0",
     "tsoa": "^6.0.1",
-    "winston": "^3.4.0"
+    "winston": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "author": "STS",
   "license": "ISC",
@@ -56,9 +65,11 @@
     "@types/busboy": "^1.5.3",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.5",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/hapi__joi": "^17.1.8",
     "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime-types": "^2.1.4",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
