--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URI = mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/
 # mongodb://localhost:27017/
+ENV_MODE=DEV
 DBNAME=boilerplate
 SECRET=secret_here
 MORGAN = combined
