--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm run build && pm2 start build/server.js --name 'boilerplate_apis' -dev",
-    "restart": "npm run build && pm2 restart passivo_apis",
+    "restart": "npm run build && pm2 restart boilerplate_apis",
     "predev": " npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
@@ -34,6 +34,7 @@
     "ejs": "^3.1.9",
     "eslint": "^8.6.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^7.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "handlebars": "^4.7.7",
     "helmet": "^7.1.0",
@@ -76,6 +77,6 @@
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.9.2"
   }
 }
