--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ ENV_MODE=DEV
 DBNAME=boilerplate
 SECRET=secret_here
 MORGAN = combined
-API_PREFIX = /v1
+API_PREFIX = /api/v1
 PORT=5300
 FRONTEND_HOST=host_here
 SENDGRID_API= digismartdisc@gmail.com
