--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_URI = mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/
+MONGODB_URI = mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/boilerplate
 # mongodb://localhost:27017/
 ENV_MODE=DEV
-DBNAME=boilerplate
+DB_NAME=boilerplate
 SECRET=secret_here
 MORGAN = combined
 API_PREFIX = /api/v1
