--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ FRONTEND_HOST=host_here
 SENDGRID_API= digismartdisc@gmail.com
 SENDGRID_API_KEY= xmcscwkzvrlorqtc
 EMAIL_HOST = smtp.gmail.com
+BASE_URL =https://boilerapi.solidappmaker.in/api/v1
