sms and notification service

--- a/.env
+++ b/.env
@@ -7,7 +7,11 @@ MORGAN = combined
 API_PREFIX = /api/v1
 PORT=5300
 FRONTEND_HOST=host_here
+
 SENDGRID_API= digismartdisc@gmail.com
 SENDGRID_API_KEY= xmcscwkzvrlorqtc
 EMAIL_HOST = smtp.gmail.com
-BASE_URL =https://boilerapi.solidappmaker.in/api/v1
+
+TWILIO_ACCOUNT_SID = TWILIO_ACCOUNT_SID
+TWILIO_AUTH_TOKEN= TWILIO_AUTH_TOKEN
+SEND_FROM_HOST = SEND_FROM_HOST
