--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8.6.0",
     "express": "^4.17.2",
     "express-rate-limit": "^7.2.0",
+    "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "handlebars": "^4.7.7",
     "helmet": "^7.1.0",
@@ -55,6 +57,7 @@
     "stripe": "^9.8.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.1.4",
+    "twilio": "^5.0.1",
     "winston": "^3.12.0",
     "xlsx": "^0.18.5"
   },
