--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "strict": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "resolveJsonModule":true
     },
     "include": [
         "src/**/*.ts"
