--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGODB_URI = mongodb://localhost:27017/
-# mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/boilerplate
+MONGODB_URI = mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/boilerplate
 # mongodb://localhost:27017/
 ENV_MODE=DEV
 DB_NAME=boilerplate
