--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI = mongodb+srv://gkashyap9602:anilkush@cluster0.hp9xj.mongodb.net/boilerplate
-# mongodb://localhost:27017/
+# mongodb://127.0.0.1:27017/
 ENV_MODE=DEV
 DB_NAME=boilerplate
 SECRET=secret_here
