--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "predev": " npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
-    "dev": "export AWS_PROFILE=digismart && export AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "dev": "set AWS_PROFILE=digismart && set AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
     "swagger": "tsoa spec",
     "prestart": "mkdir -p build/template && cp -a src/template build/"
   },
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@types/moment": "^2.13.0",
     "aws-cli": "^0.0.2",
     "aws-sdk": "^2.1577.0",
     "axios": "^0.27.2",
@@ -38,14 +39,12 @@
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "handlebars": "^4.7.7",
     "helmet": "^7.1.0",
     "joi-objectid": "^4.0.2",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.35",
-    "moment": "^2.29.4",
-    "mongo-copydb": "^1.0.4",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "mongoose-lean-virtuals": "^0.9.1",
     "morgan": "^1.10.0",
@@ -53,8 +52,7 @@
     "multer-s3": "^3.0.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.5",
-    "sharp": "^0.33.2",
-    "stripe": "^9.8.0",
+    "sharp": "^0.33.3",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.1.4",
     "twilio": "^5.0.1",
