--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "predev": " npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
-    "dev": "set AWS_PROFILE=digismart && set AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "dev": "export AWS_PROFILE=digismart && export AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
     "swagger": "tsoa spec",
-    "prestart": "mkdir -p build/template && cp -a src/template build/"
+    "prestart": "mkdir -p build/template && cp -a src/template build/",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "nodemonConfig": {
     "watch": [
@@ -33,7 +35,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.9",
-    "eslint": "^8.6.0",
     "express": "^4.17.2",
     "express-rate-limit": "^7.2.0",
     "firebase": "^10.9.0",
@@ -77,7 +78,10 @@
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "concurrently": "^7.0.0",
+    "eslint": "^8.57.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.2"
   }
