--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
+    "music-metadata": "^7.14.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.5",
     "sharp": "^0.33.3",
