--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.5",
     "sharp": "^0.33.3",
+    "stripe": "^15.4.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.1.4",
     "twilio": "^5.0.1",
