--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^8.1.3",
     "@types/moment": "^2.13.0",
     "aws-cli": "^0.0.2",
     "aws-sdk": "^2.1577.0",
