--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sharp": "^0.33.3",
     "stripe": "^15.4.0",
     "swagger-ui-express": "^5.0.0",
+    "translatte": "^3.0.1",
     "tsoa": "^6.1.4",
     "twilio": "^5.0.1",
     "winston": "^3.12.0",
