--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ EMAIL_HOST = smtp.gmail.com
 TWILIO_ACCOUNT_SID = TWILIO_ACCOUNT_SID
 TWILIO_AUTH_TOKEN= TWILIO_AUTH_TOKEN
 SEND_FROM_HOST = SEND_FROM_HOST
+COLLECTION_ID_AWS_REKOGNITION = search_user_7fxvZu2k0Gu584296711268
