--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "music-metadata": "^7.14.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.5",
+    "puppeteer": "^23.3.0",
     "sharp": "^0.33.3",
     "stripe": "^15.4.0",
     "swagger-ui-express": "^5.0.0",
