--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && pm2 start build/server.js --name 'boilerplate_apis' -dev",
     "restart": "npm run build && pm2 restart boilerplate_apis",
-    "predev": "npm run lint && npm run swagger",
+    "predev": " npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
     "dev": "export AWS_PROFILE=digismart && export AWS_SDK_LOAD_CONFIG=1 && concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
@@ -20,7 +20,7 @@
       "src"
     ],
     "ext": "ts",
-    "exec": "npm run lint && ts-node src/server.ts"
+    "exec": "ts-node src/server.ts"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
