--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ API_PREFIX = /api/v1
 PORT=5300
 FRONTEND_HOST=host_here
 
-SENDGRID_API= digismartdisc@gmail.com
-SENDGRID_API_KEY= xmcscwkzvrlorqtc
+SMTP_EMAIL= digismartdisc@gmail.com
+SMTP_API_KEY= xmcscwkzvrlorqtc
 EMAIL_HOST = smtp.gmail.com
 
 TWILIO_ACCOUNT_SID = TWILIO_ACCOUNT_SID
