--- a/package.json
+++ b/package.json
@@ -23,46 +23,45 @@
     "exec": "ts-node src/server.ts"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@sendgrid/mail": "^8.1.3",
+    "@sendgrid/mail": "^8.1.4",
     "@types/moment": "^2.13.0",
     "aws-cli": "^0.0.2",
-    "aws-sdk": "^2.1577.0",
-    "axios": "^0.27.2",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.1",
-    "bull": "^4.12.2",
+    "body-parser": "^1.20.3",
+    "bull": "^4.16.5",
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.9",
-    "express": "^4.17.2",
-    "express-rate-limit": "^7.2.0",
-    "firebase": "^10.9.0",
-    "firebase-admin": "^12.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
-    "json2csv": "^5.0.7",
-    "jsonwebtoken": "^8.5.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
-    "mongoose-lean-virtuals": "^0.9.1",
+    "mongoose-lean-virtuals": "^1.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "music-metadata": "^7.14.0",
+    "music-metadata": "^10.6.4",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.7.5",
-    "puppeteer": "^23.3.0",
-    "sharp": "^0.33.3",
-    "stripe": "^15.4.0",
-    "swagger-ui-express": "^5.0.0",
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5",
+    "stripe": "^17.5.0",
+    "swagger-ui-express": "^5.0.1",
     "translatte": "^3.0.1",
-    "tsoa": "^6.1.4",
-    "twilio": "^5.0.1",
-    "winston": "^3.12.0",
+    "tsoa": "^6.6.0",
+    "twilio": "^5.4.0",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   },
   "author": "STS",
@@ -70,23 +69,22 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
-    "@types/busboy": "^1.5.3",
+    "@types/busboy": "^1.5.4",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.5",
-    "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/hapi__joi": "^17.1.8",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/json2csv": "^5.0.3",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mime-types": "^2.1.4",
     "@types/morgan": "^1.9.3",
-    "@types/multer": "^1.4.7",
-    "@types/nodemailer": "^6.4.4",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "concurrently": "^7.0.0",
-    "eslint": "^8.57.0",
-    "nodemon": "^2.0.15",
+    "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.17.0",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
 }
